tests-integration/fixtures/checking/112_int_mul_invalid_no_instance/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Proxy :: forall (k :: Type) (a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
invalid :: Mul 2 3 10 => Proxy @Int 10
forceSolve :: { invalid :: Proxy @Int 10 }

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Data
Proxy
  Quantified = :0
  Kind = :1


Roles
Proxy = [Phantom]

Diagnostics
error[NoInstanceFound]: No instance found for: Mul 2 3 10
  --> 11:1..11:25
   |
11 | forceSolve = { invalid }
   | ^~~~~~~~~~~~~~~~~~~~~~~~
